grammar.txt
program : statement 

program : statement program 

statement : assignation
				| transformation
				| control 
				
integer_argument : IDENTIFIER
					| INTEGER
					| STEP


integer_argument : integer_argument ADD_OP integer_argument
					| integer_argument MUL_OP integer_argument


string_argument : STRING 

string_argument : IDENTIFIER 

point_argument : IDENTIFIER
					| POINT


color_argument : IDENTIFIER
					| COLOR


boolean_argument : IDENTIFIER
					| BOOLEAN


color_arguments : RGB '(' integer_argument ',' integer_argument ',' integer_argument ')'
						| HEX '(' string_argument ')'
						| NAME '(' string_argument ')'


point_arguments : X '(' integer_argument ')'
					| Y '(' integer_argument ')'


point_arguments : X '(' integer_argument ')' ':' point_arguments
					| Y '(' integer_argument ')' ':' point_arguments


line_arguments : P1 '(' point_argument ')'
					| P2 '(' point_argument ')'
					| FILL_COLOR '(' color_argument ')'
					| WIDTH '(' integer_argument ')'


line_arguments : P1 '(' point_argument ')' ':' line_arguments
					| P2 '(' point_argument ')' ':' line_arguments
					| FILL_COLOR '(' color_argument ')' ':' line_arguments
					| WIDTH '(' integer_argument ')' ':' line_arguments


circle_arguments :  C '(' point_argument ')'
						| R '(' integer_argument ')'
						| BORDER_COLOR '(' color_argument ')'
						| BORDER_WIDTH '(' integer_argument ')'
						| FILL_COLOR '(' color_argument ')'


circle_arguments :  C '(' point_argument ')' ':' circle_arguments
						| R '(' integer_argument ')' ':' circle_arguments
						| BORDER_COLOR '(' color_argument ')' ':' circle_arguments
						| BORDER_WIDTH '(' integer_argument ')' ':' circle_arguments
						| FILL_COLOR '(' color_argument ')' ':' circle_arguments


rect_arguments :  O '(' point_argument ')'
					| WIDTH '(' integer_argument ')'
					| HEIGHT '(' integer_argument ')'
					| RX '(' integer_argument ')'
					| RY '(' integer_argument ')'
					| BORDER_COLOR '(' color_argument ')'
					| BORDER_WIDTH '(' integer_argument ')'
					| FILL_COLOR '(' color_argument ')'


rect_arguments :  O '(' point_argument ')' ':' rect_arguments
					| WIDTH '(' integer_argument ')' ':' rect_arguments
					| HEIGHT '(' integer_argument ')' ':' rect_arguments
					| RX '(' integer_argument ')' ':' rect_arguments
					| RY '(' integer_argument ')' ':' rect_arguments
					| BORDER_COLOR '(' color_argument ')' ':' rect_arguments
					| BORDER_WIDTH '(' integer_argument ')' ':' rect_arguments
					| FILL_COLOR '(' color_argument ')' ':' rect_arguments


ellipse_arguments :  C '(' point_argument ')'
						| RY '(' integer_argument ')'
						| RX '(' integer_argument ')'
						| BORDER_COLOR '(' color_argument ')'
						| BORDER_WIDTH '(' integer_argument ')'
						| FILL_COLOR '(' color_argument ')'


ellipse_arguments :  C '(' point_argument ')' ':' ellipse_arguments
						| RY '(' integer_argument ')' ':' ellipse_arguments
						| RX '(' integer_argument ')' ':' ellipse_arguments
						| BORDER_COLOR '(' color_argument ')' ':' ellipse_arguments
						| BORDER_WIDTH '(' integer_argument ')' ':' ellipse_arguments
						| FILL_COLOR '(' color_argument ')' ':' ellipse_arguments


customshape_arguments :  P '(' point_argument ')'
							| BORDER_COLOR '(' color_argument ')'
							| BORDER_WIDTH '(' integer_argument ')'
							| CLOSE '(' boolean_argument ')'
							| FILL_COLOR '(' color_argument ')'


customshape_arguments :  P '(' point_argument ')' ':' customshape_arguments
						| BORDER_COLOR '(' color_argument ')' ':' customshape_arguments
						| BORDER_WIDTH '(' integer_argument ')' ':' customshape_arguments
						| CLOSE '(' boolean_argument ')' ':' customshape_arguments
						| FILL_COLOR '(' color_argument ')' ':' customshape_arguments


text_arguments :  CONTENT '(' string_argument ')'
					| P '(' point_argument ')'
					| FONT '(' string_argument ')'
					| SIZE '(' integer_argument ')'
					| FILL_COLOR '(' color_argument ')'


text_arguments :  CONTENT '(' string_argument ')' ':' text_arguments
					| P '(' point_argument ')' ':' text_arguments
					| FONT '(' string_argument ')' ':' text_arguments
					| SIZE '(' integer_argument ')' ':' text_arguments
					| FILL_COLOR '(' color_argument ')' ':' text_arguments


color : COLOR ':' color_arguments 

point : POINT ':' point_arguments 

line : LINE ':' line_arguments 

circle : CIRCLE ':' circle_arguments 

rect : RECT ':' rect_arguments 

ellipse : ELLIPSE ':' ellipse_arguments 

customshape : CUSTOMSHAPE ':' customshape_arguments 

text : TEXT ':' text_arguments 

shape : line
			| circle
			| rect
			| ellipse
			| customshape
			| text


rotate_arguments : ANGLE '(' integer_argument ')'
						| C '(' point_argument ')'


rotate_arguments : ANGLE '(' integer_argument ')' ':' rotate_arguments
						| C '(' point_argument ')' ':' rotate_arguments


scale_arguments : SX '(' integer_argument ')'
					| SY '(' integer_argument ')'


scale_arguments : SX '(' integer_argument ')' ':' scale_arguments
					| SY '(' integer_argument ')' ':' scale_arguments


translate_argument : P '(' point_argument ')'


hide_argument : H '(' boolean_argument ')'


transformation : ROTATE ':' rotate_arguments
					| SCALE ':' scale_arguments
					| TRANSLATE ':' translate_argument
					| HIDE ':' hide_argument


control : IF condition '{' program '}' 

control : WHILE condition '{' program '}' 

control : FOR integer_argument ':' integer_argument '{' program '}' 

apply_body : IDENTIFIER ';'


apply_body : IDENTIFIER ';' apply_body


control : APPLY IDENTIFIER '{' apply_body '}' 

condition : integer_argument COND_OP integer_argument
			| string_argument COND_OP string_argument
			| boolean_argument


assignation : IDENTIFIER '=' shape ';'
				| IDENTIFIER '=' point ';'
				| IDENTIFIER '=' color ';'
				| IDENTIFIER '=' transformation ';'
				| IDENTIFIER '=' integer_argument ';'
				| IDENTIFIER '=' string_argument ';'
				| IDENTIFIER '=' point_argument ';'
				| IDENTIFIER '=' color_argument ';'
				| IDENTIFIER '=' boolean_argument ';'
